--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,8 +40,11 @@
                     android:scheme="oauth" />
             </intent-filter>
         </activity>
-        <activity android:name=".TimelineActivity"   android:theme="@style/AppTheme"></activity>
-        <activity android:name=".Compose"></activity>
+        <activity
+            android:name=".TimelineActivity"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".Compose" />
+        <activity android:name=".Profile"></activity>
     </application>
 
 </manifest>
